--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "amqplib": "^0.5.3",
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "kafkajs": "^1.10.0",
     "moment": "^2.24.0",
     "net": "^1.0.2",
     "pg": "^7.12.0",
     "sequelize": "^5.11.0",
+    "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
   }
 }
