--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "kafkajs": "^1.10.0",
+    "kue": "^0.11.6",
     "moment": "^2.24.0",
+    "nats": "^1.3.2",
     "net": "^1.0.2",
+    "node-nats-streaming": "^0.2.6",
     "pg": "^7.12.0",
+    "redis": "^2.8.0",
+    "redis-streams": "^1.1.0",
     "sequelize": "^5.11.0",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
