--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.3",
+    "date-fns": "^2.4.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "kafkajs": "^1.10.0",
