--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.3",
+    "bcrypt": "^3.0.7",
     "date-fns": "^2.4.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
@@ -24,6 +25,7 @@
     "pg": "^7.12.0",
     "redis": "^2.8.0",
     "redis-streams": "^1.1.0",
+    "require-dir": "^1.2.0",
     "sequelize": "^5.11.0",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
