--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
 PORT_LISTENER=6060
-PORT_DEBUG=6969
-KAFKA_URL='localhost:9092'
-POSTGRES_URL='postgres://rastreador:rastreador@localhost:5432/rastreadordb'
+POSTGRES_URL='postgres://rastreador:rastreador@localhost:5432/rastreador_new'
