--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT_LISTENER=6060
-POSTGRES_URL='postgres://rastreador:rastreador@localhost:5432/rastreador_new'
+POSTGRES_URL='postgres://rastreador:rastreador@localhost:5432/georastreamento'
