--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "amqplib": "^0.5.3",
     "bcrypt": "^3.0.7",
+    "carrier": "^0.3.0",
     "date-fns": "^2.4.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
