--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "redis-streams": "^1.1.0",
     "require-dir": "^1.2.0",
     "sequelize": "^5.11.0",
-    "socket.io": "^2.2.0",
+    "socket.io": "2.1.1",
     "uuid": "^3.3.2",
     "yarn": "^1.22.0"
   }
