--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.4.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "ioredis": "^4.17.1",
     "kafkajs": "^1.10.0",
     "kue": "^0.11.6",
     "moment": "^2.24.0",
