--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.3",
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
     "carrier": "^0.3.0",
     "date-fns": "^2.4.1",
